--- a/index.css
+++ b/index.css
@@ -42,13 +42,10 @@ nav {
     height: 800px;
     padding-left: 40px;
     padding-right: 40px;
-    border-style: solid;
-    border-color: black;
-    border-width: 2px;
+    padding-top: 200px;
 }
 
 #home h2 {
-    margin-top: 200px;
     font-size: 275%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 700;
@@ -57,9 +54,17 @@ nav {
 
 #home p {
     font-size: 175%;
-    margin-top: 30px;
+    margin-top: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-right: 200px;
+}
+
+#home h3 {
+    font-size: 150%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 15px;
+    color: rgb(55, 109, 55);
+    font-weight: 600;
 }
 
 #links {
@@ -145,7 +150,6 @@ video {
 }
 
 #aboutmyself h2 {
-    margin-top: 200px;
     font-size: 275%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 700;
