--- a/index.css
+++ b/index.css
@@ -83,12 +83,13 @@ nav {
     justify-content: center;
     align-items: center;
     width: 33.3%;
-    transition-property: background-color;
+    transition-property: all;
     transition-duration: 0.3s;
+    background-color: white ;
 }
 
 #links a:hover {
-    background-color: rgb(179, 179, 179);
+    transform: scale(1.15);
 }
 
 #links a p {
@@ -282,13 +283,61 @@ video {
     border-left-width: 1px;
 }
 
+#contact {
+    padding-top: 100px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+
+#contact h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(55, 109, 55);
+    font-weight: 600;
+    font-size: 275%;
+    border-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: black;
+    max-width: 50%;
+}
+
+#contact h3 {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 130%;
+    margin-right: 50%;
+}
+
+#contact p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-size: 120%;
+}
+
+#green {
+    color: rgb(55, 109, 55);
+}
+
+#visible {
+    display: block;
+}
+
+#invisible {
+    display: none;
+}
+
 @media (max-width: 1215px) {
     #leftside {
-        display: none;
+        position: absolute;
+        z-index: -1;
+        width: 100%;
     }
 
     #rightside {
         width: 100vw;
+        background-color: rgba(255, 255, 255, 0.753);
     }
 
     #home,
@@ -296,7 +345,6 @@ video {
     #myprojects,
     #contact {
         min-height: 100vh;
-        height: 800px;
         padding-left: 40px;
         padding-right: 40px;
     }
@@ -317,6 +365,8 @@ video {
 
     #menu {
         display: inline;
+        height: 40%;
+        cursor: pointer;
     }
 
     #media {
