--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ nav {
     height: 70px;
     background-color: rgb(255, 255, 255);
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 90%;
     right: 5%;
     left: 5%;
@@ -320,12 +320,57 @@ video {
     color: rgb(55, 109, 55);
 }
 
-#visible {
-    display: block;
+.visible {
+    bottom: 0%;
 }
 
-#invisible {
-    display: none;
+.invisible {
+    bottom: 100%;
+}
+
+#menudropdown {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    background-color: white;
+    transition-property: bottom ;
+    transition-duration: 0.5s;
+}
+
+#linksdropdown {
+    display: flex;
+    flex-flow: column nowrap;
+    padding-top: 150px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#linksdropdown a {
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-property: all;
+    transition-duration: 0.3s;
+    background-color: white ;
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    color: black;
+}
+
+#linksdropdown a p {
+    text-decoration: none;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 350%;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
 }
 
 @media (max-width: 1215px) {
