--- a/index.css
+++ b/index.css
@@ -342,7 +342,7 @@ video {
     flex-flow: column nowrap;
     padding-top: 150px;
     justify-content: flex-start;
-    align-items: center;
+    align-items: center; 
 }
 
 #linksdropdown a {
@@ -366,7 +366,7 @@ video {
     text-decoration: none;
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 350%;
+    font-size: 250%;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -422,8 +422,10 @@ video {
         justify-content: flex-end;
         padding-right: 20px;
     }
-}
 
-div {
-    
+    video {
+        min-width: 100vw;
+        min-height: 100vh;
+        object-fit: fill;
+    }
 }
