--- a/index.css
+++ b/index.css
@@ -408,6 +408,20 @@ video {
         display: none;
     }
 
+    #mediadropdown a img {
+        width: 100px;
+        height: 100px;
+    }
+
+    #mediadropdown {
+        width: 100%;
+        height: 30px;
+        z-index: 1;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+    }
+
     #menu {
         display: inline;
         height: 40%;
